[package]
name = "rqlited"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
doctest = false
test = false

[[bin]]
name = "sqlited"
path = "src/bin/rqlited.rs"

[dependencies]
core-tracing = { path = "../core/tracing" }
core-exception = { path = "../core/exception" }
core-command = { path = "../core/command" }
core-store = { path = "../core/store" }
core-util-misc = { path = "../core/util/misc" }

async-trait = { version = "0.1.52" }
futures = { version = "0.3.21" }
clap = { version = "3.1.1", features = ["derive", "env"] }
tokio = { version = "1.1", features = ["full"] }
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.78"
actix-web = { version = "4.0", features = ["openssl"] }
actix-server = { version = "2" }
tracing-actix-web = "0.5"
actix-rt = "2.6"
toml = "0.5.8"
openssl = { version = "0.10" }
qstring = "0.7"
