[package]
name = "core-command"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.1.0"
prost = "0.7.0"
serde = { version = "1.0.136", features = ["derive"] }

[build-dependencies]
prost-build = { version = "0.7.0" }
