[package]
name = "core-exception"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.30"
backtrace = "0.3.64"
anyhow = "1.0.55"
paste = "1.0.6"

heed = "0.10"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
prost = "0.7"
tonic = "0.4"
bincode = "1.3.3"
rusqlite = "0.26.3"
raft = { version = "0.6", features = ["prost-codec"], default-features = false }
r2d2 = "0.8.9"
