[package]
name = "core-sled"
version = "0.1.0"
description = "Sled store backend for raft state machine"
authors = ["Databend Authors <opensource@datafuselabs.com>"]
license = "Apache-2.0"
publish = false
edition = "2021"

[lib]
doctest = false
test = false

[dependencies]
core-exception = { path = "../exception" }
core-tracing = { path = "../tracing" }

openraft = { git = "https://github.com/datafuselabs/openraft", rev = "efdc321dad07344360732da277f63150e5cfc4d0" }
sled = { version = "0.34" }

anyerror = "0.1.6"
anyhow = "1.0.55"
thiserror = "1.0"
byteorder = "1.4.3"
once_cell = "1.9.0"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
tempfile = "3.3.0"

# [dev-dependencies]
# common-base = { path = "../../base" }
