[package]
name = "core-util-containers"
version = "0.1.0"
authors = ["Databend Authors <opensource@datafuselabs.com>"]
license = "Apache-2.0"
publish = false
edition = "2021"

[lib]
doctest = false
test = false

[dependencies]
# common-base = { path = "../base" }
core-tracing = { path = "../../tracing" }

async-trait = "0.1.52"
tokio = "1.17"

[dev-dependencies]
anyhow = "1.0.55"
