[package]
name = "core-util-misc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.52"
rand = "0.8.5"
futures = "0.3.21"
ctrlc = { version = "3.2.1", features = ["termination"] }
uuid = { version = "0.8", features = ["serde", "v4"] }
tokio = { version = "1.17" }
core-exception = { path = "../../exception" }
core-tracing = { path = "../../tracing" }
